; ModuleID = '/home/carl/AnghaBench/lab/third_party/md/extr_mddriver.c_MDFile.c'
source_filename = "/home/carl/AnghaBench/lab/third_party/md/extr_mddriver.c_MDFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"%s can't be opened\0A\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"MD%d (%s) = \00", align 1
@MD = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @MDFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @MDFile(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [1024 x i8], align 16
  %7 = alloca [16 x i8], align 16
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i32* @fopen(i8* %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %9, i32** %3, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* %12)
  br label %36

14:                                               ; preds = %1
  %15 = call i32 @MDInit(i32* %4)
  br label %16

16:                                               ; preds = %21, %14
  %17 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @fread(i8* %17, i32 1, i32 1024, i32* %18)
  store i32 %19, i32* %5, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @MDUpdate(i32* %4, i8* %22, i32 %23)
  br label %16

25:                                               ; preds = %16
  %26 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %27 = call i32 @MDFinal(i8* %26, i32* %4)
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @fclose(i32* %28)
  %30 = load i32, i32* @MD, align 4
  %31 = load i8*, i8** %2, align 8
  %32 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %30, i8* %31)
  %33 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %34 = call i32 @MDPrint(i8* %33)
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  br label %36

36:                                               ; preds = %25, %11
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @MDInit(i32*) #1

declare dso_local i32 @fread(i8*, i32, i32, i32*) #1

declare dso_local i32 @MDUpdate(i32*, i8*, i32) #1

declare dso_local i32 @MDFinal(i8*, i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @MDPrint(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
